$Id$

MIDIbox NG V1.033
~~~~~~~~~~~~~~~~~

   o added basic support for SPI_MIDI
     Currently it's necessary to enable this option in the mios32_config.h file:
     set the MIOS32_SPI_MIDI_NUM_PORTS define to 4


MIDIbox NG V1.032
~~~~~~~~~~~~~~~~~

   o support for mathematical operations in .NGR script.
     They have to be surrounded with square-brackets ([...])
     Syntax: [<left-operand><operator><right-operand>]
     Example:
        - set LED:2000 [LED:2000 + 1]
          will increment the value stored in LED:2000
        - set LED:2000 [LED:2000 - 1]
          will decrement the value stored in LED:2000

     Note that nested operations are supported as well, such as:
        - send CC USB1 1 [LED:2000 + [LED:2001 + [LED:2002 + LED:2003]]]

     More examples in cfg/tests/runscr5.ngc

     Support operators: + - * / % & | ^


   o number of scanned SRIOs now configurable in .NGC file
     with 'SRIO num_sr=<1..32>'

     By default 32 DIN and DOUT shift registers are scanned, which
     result into an update rate of ca. 420 uS on a STM32F4 based core.

     With (for example) 'sr_num=8' only up to 8 DIN and 8 DOUT SRs will
     be scanned anymore, but the update rate is reduced to ca. 110..120 uS
     (a little bit more than a quarter due to SR handling overhead)
     

    o corrected DebounceCtr parameter (value was not passed to MIOS32)
      Now also part of the SRIO configuration, use:
      SRIO debounce_cycles=<1..255>

    o added new meta event "KbBreakIsMake:<keyboard-number>" which will
      already trigger a note event when the break contact is activated
      (nice for playing organ style).
      Trigger it from a toggle button function as shown in cfg/test/kb_5.ngc
      Can be optionally set from the terminal as well with following
      command: "set kb <keyboard-number> break_is_make <on|off>"
      (e.g. "set kb 1 break_is_make on")

   o added ain_mode=Toggle for AIN and AINSER events.